<resources>
    <string name="app_name">Rengoring</string>
    <string name="supply">Supply</string>
    <string name="timetable">Time Table</string>
    <string name="todayShift">Today Shift</string>
    <string name="request_name">Request Name</string>
    <string name="name">Name</string>
    <string name="product_name">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="add">Add</string>
    <string name="_0">0</string>
    <string name="send_request">Send Request</string>
    <string name="x">X</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="location">Location</string>
    <string name="enter_location">Enter Location :</string>
    <string name="locationDots">location...</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="save">Save</string>
</resources>
