<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".View.Request.AddRequestActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/requestNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:paddingTop="10dp"
                android:text="@string/request_name"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/editTextNameRequest"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextNameRequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/productTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:paddingTop="10dp"
                android:text="@string/product_name"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/requestNameTextView" />

            <TextView
                android:id="@+id/productQuantityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="20dp"
                android:text="@string/quantity"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            tools:context="com.example.rengoring.View.Request.AddRequestActivity">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/add"
                        android:layout_width="75dp"
                        android:layout_height="50dp"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/edit_custom_button"
                        android:text="@string/add"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <AutoCompleteTextView
                        android:id="@+id/quantity"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="87dp"
                        android:backgroundTint="@color/white"
                        android:ems="10"
                        android:hint="@string/_0"
                        android:inputType="number"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        tools:ignore="RtlCompat" />

                    <AutoCompleteTextView
                        android:id="@+id/nameProduct"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_toStartOf="@id/quantity"
                        android:backgroundTint="@color/white"
                        android:hint="@string/name"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


        <Button
            android:id="@+id/addRequestButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/edit_custom_button"
            android:text="@string/send_request"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>